# rust-ssmtp

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/email/: mod.rs
