[package]
name = "ssmtp"
version = "1.0.1"
authors = ["Alexander Elias<alex.steven.elias@gmail.com>"]

description = "Rust sending emails via sendmail. Works nicely with Iron Framework using form Posts."

repository = "https://github.com/AlexanderElias/rust-ssmtp"

readme = "README.md"

keywords = ["Rust","Ssmtp","Email"]

license-file = "LICENSE"
